--- a/Calling/package.json
+++ b/Calling/package.json
@@ -60,7 +60,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "copyfiles": "^2.4.1",
     "cross-env": "~7.0.3",
-    "css-loader": "~4.3.0",
+    "css-loader": "~7.1.2",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^6.0.0",
@@ -84,7 +84,7 @@
     "ts-loader": "^8.0.12",
     "typescript": "^4.3.5",
     "url-loader": "~4.1.1",
-    "webpack": "5.89.0",
+    "webpack": ">=5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "4.8.1"
   }
